--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+# docker-compose.yml
 version: '3'
 
 volumes:
@@ -30,7 +31,7 @@ services:
     build: ./nginx/
     env_file: .env
     ports:
-      - 9000:80
+      - 8000:80
     volumes:
       - static:/staticfiles
-      - media/media
+      - media:/media
