--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# docker-compose.yml
 version: '3'
 
 volumes:
@@ -7,31 +6,31 @@ volumes:
   media:
 
 services:
-  kittygram_db:
+  db:
     image: postgres:13
     env_file: .env
     volumes:
       - pg_data:/var/lib/postgresql/data
-  
+
   backend:
     build: ./backend/
     env_file: .env
     volumes:
-      - static:/backend_static
-      - media:/media
-  
+      - static:/static/
+      - media:/app/media/
+
   frontend:
     env_file: .env
     build: ./frontend/
-    command: cp -r /app/build/. /frontend_static/
+    command: cp -r /app/build/. /static/
     volumes:
-      - static:/frontend_static
-  
+      - static:/static
+
   gateway:
     build: ./nginx/
     env_file: .env
     ports:
-      - 8000:80
+      - 9000:80
     volumes:
-      - static:/staticfiles
-      - media:/media
+      - static:/static
+      - media:/app/media/
