--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
+#django secrets
+SECRET_KEY=your secret key from settings.py
+DEBUG=False
+ALLOWED_HOST=127.0.0.1,localhost
+
+#postgre secret
 POSTGRES_DB=kittygram
 POSTGRES_USER=kittygram_user
 POSTGRES_PASSWORD=kittygram_password
