--- a/kittygram_workflow.yml
+++ b/kittygram_workflow.yml
@@ -37,6 +37,7 @@ jobs:
         POSTGRES_DB: django_db
         DB_HOST: 127.0.0.1
         DB_PORT: 5432
+        SECRET_KEY: ${{ secrets.SEKRET_KEY }}
       run: |
         python -m flake8 backend/
         cd backend/
@@ -151,6 +152,9 @@ jobs:
         passphrase: ${{ secrets.SSH_PASSPHRASE }}
         script: |
           cd kittygram
+          touch .env
+          echo SEKRET_KEY = ${{ secrets.SECRET_KEY }} >> .env
+          cat .env
           sudo docker compose -f docker-compose.production.yml pull
           sudo docker compose -f docker-compose.production.yml down
           sudo docker compose -f docker-compose.production.yml up -d
