Add env creation

--- a/kittygram_workflow.yml
+++ b/kittygram_workflow.yml
@@ -152,9 +152,7 @@ jobs:
         passphrase: ${{ secrets.SSH_PASSPHRASE }}
         script: |
           cd kittygram
-          touch .env
-          echo SECRET_KEY = ${{ secrets.SECRET_KEY }} >> .env
-          cat .env
+          echo ${{ secrets.ENV }} >> .env
           sudo docker compose -f docker-compose.production.yml pull
           sudo docker compose -f docker-compose.production.yml down
           sudo docker compose -f docker-compose.production.yml up -d
