--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,7 +19,7 @@ server {
 
   location / {
     proxy_set_header Host $http_host;
-    alias /static/;
+    alias /static_volume/;
     try_files $uri $uri/ /index.html;
   }
 } 
