--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,13 +13,11 @@ server {
   }
 
   location /media/ {
-    proxy_set_header Host $http_host;
     root /app/;
   }
 
   location / {
-    proxy_set_header Host $http_host;
-    alias /static_volume/;
+    alias /staticfiles/;
     try_files $uri $uri/ /index.html;
   }
 } 
