--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -18,7 +18,7 @@ services:
     env_file: .env
     volumes:
       - static_volume:/backend_static
-      - media_volume:/app/media/
+      - media_volume:/mediafiles
   
   frontend:
     image: shuvnat/kittygram_frontend 
@@ -31,7 +31,7 @@ services:
     image: shuvnat/kittygram_gateway
     env_file: .env
     volumes:
-      - static_volume:/staticfiles/
-      - media_volume:/app/media/
+      - static_volume:/staticfiles
+      - media_volume:/mediafiles
     ports:
       - 9000:80
