--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,9 +13,7 @@ server {
   }
 
   location /media/ {
-    proxy_set_header Host $http_host;
-    alias /mediafiles/;
-    proxy_pass http://backend:9000/media/;
+    root /;
   }
 
   location / {
