--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,8 +12,10 @@ server {
     proxy_pass http://backend:9000/admin/;
   }
 
-  location /media/ {
-    root /;
+  location /media/ { 
+    proxy_set_header Host $http_host;
+    root /app/;
+    try_files $uri $uri/ /index.html;
   }
 
   location / {
