--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,8 +13,7 @@ server {
   }
 
   location /media/ { 
-    proxy_set_header Host $http_host;
-    root /app/;
+    root /mediafiles/;
   }
 
   location / {
