--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,11 +12,13 @@ server {
     proxy_pass http://backend:9000/admin/;
   }
 
-  location /media/ { 
+  location /media/ {
+    proxy_set_header Host $http_host;
     root /mediafiles/;
   }
 
   location / {
+    proxy_set_header Host $http_host;
     alias /staticfiles/;
     try_files $uri $uri/ /index.html;
   }
