--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -14,24 +14,24 @@ services:
       - pg_data_production:/var/lib/postgresql/data
   
   backend:
-    image: shuvnat/kittygram_backend
+    image: ${{ secrets.DOCKER_USERNAME }}/kittygram_backend
     env_file: .env
     volumes:
       - static_volume:/backend_static
-      - media_volume:/mediafiles
+      - media_volume:/app/media
   
   frontend:
-    image: shuvnat/kittygram_frontend 
+    image: ${{ secrets.DOCKER_USERNAME }}/kittygram_frontend 
     env_file: .env
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - static_volume:/frontend_static
   
   gateway:
-    image: shuvnat/kittygram_gateway
+    image: ${{ secrets.DOCKER_USERNAME }}/kittygram_gateway
     env_file: .env
     volumes:
       - static_volume:/staticfiles
-      - media_volume:/mediafiles
+      - media_volume:/app/media
     ports:
       - 9000:80
