--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,7 +13,8 @@ server {
   }
 
   location /media/ { 
-    root /mediafiles/;
+    proxy_set_header Host $http_host;
+    alias /mediafiles/;
   }
 
   location / {
