--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -14,22 +14,22 @@ services:
       - pg_data_production:/var/lib/postgresql/data
   
   backend:
-    image: ${{ secrets.DOCKER_USERNAME }}/kittygram_backend
     env_file: .env
+    image: ${DOCKER_USERNAME}/kittygram_backend
     volumes:
       - static_volume:/backend_static
       - media_volume:/mediafiles
   
   frontend:
-    image: ${{ secrets.DOCKER_USERNAME }}/kittygram_frontend 
     env_file: .env
+    image: ${DOCKER_USERNAME}/kittygram_frontend 
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - static_volume:/frontend_static
   
   gateway:
-    image: ${{ secrets.DOCKER_USERNAME }}/kittygram_gateway
     env_file: .env
+    image: ${DOCKER_USERNAME}/kittygram_gateway
     volumes:
       - static_volume:/staticfiles
       - media_volume:/mediafiles
