--- a/kittygram_workflow.yml
+++ b/kittygram_workflow.yml
@@ -1,4 +1,4 @@
-name: Main kittygram workflow
+name: Main Kittygram workflow
 
 on:
   push:
@@ -37,7 +37,7 @@ jobs:
         POSTGRES_DB: django_db
         DB_HOST: 127.0.0.1
         DB_PORT: 5432
-        SECRET_KEY: ${{ secrets.SEKRET_KEY }}
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
       run: |
         python -m flake8 backend/
         cd backend/
@@ -152,7 +152,8 @@ jobs:
         passphrase: ${{ secrets.SSH_PASSPHRASE }}
         script: |
           cd kittygram
-          echo ${{ secrets.ENV }} >> .env
+          touch .env
+          echo "${{ secrets.ENV }}" > .env
           sudo docker compose -f docker-compose.production.yml pull
           sudo docker compose -f docker-compose.production.yml down
           sudo docker compose -f docker-compose.production.yml up -d
