--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -18,7 +18,7 @@ services:
     image: ${DOCKER_USERNAME}/kittygram_backend
     volumes:
       - static_volume:/backend_static
-      - media_volume:/media
+      - media_volume:/app/media
   
   frontend:
     env_file: .env
@@ -32,6 +32,6 @@ services:
     image: ${DOCKER_USERNAME}/kittygram_gateway
     volumes:
       - static_volume:/staticfiles
-      - media_volume:/media
+      - media_volume:/app/media
     ports:
       - 9000:80
