--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
   backend:
     build: ./backend/
     env_file: .env
+    depends_on: db
     volumes:
       - static:/static/
       - media:/app/media/
@@ -30,6 +31,7 @@ services:
   gateway:
     build: ./nginx/
     env_file: .env
+    depends_on: backend
     ports:
       - 9000:80
     volumes:
