--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -16,7 +16,8 @@ services:
   backend:
     env_file: .env
     image: ${DOCKER_USERNAME}/kittygram_backend
-    depends_on: db
+    depends_on:
+      - db
     volumes:
       - static_volume:/backend_static
       - media_volume:/app/media
@@ -31,7 +32,8 @@ services:
   gateway:
     env_file: .env
     image: ${DOCKER_USERNAME}/kittygram_gateway
-    depends_on: backend
+    depends_on:
+      - backend
     volumes:
       - static_volume:/staticfiles
       - media_volume:/app/media
